--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
-  background-image: url(http://www.mtcomputers.com/989x657FourSome.jpg);
+  background-image: url(https://proxy.duckduckgo.com/iu/?u=https%3A%2F%2Fwww.indiawilds.com%2Fimages%2FSabyasachi_about.jpg&f=1);
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
