--- a/src/components/Cast/cast.css
+++ b/src/components/Cast/cast.css
@@ -12,8 +12,7 @@
 }
 .castMemberButton {
     display: flex;
-    justify-content: space-evenly;
-    margin: 0 0 100px 0;
+    /* justify-content: space-evenly; */
 }
 .castMembers {
     display: flex;
