--- a/src/components/projects/project.css
+++ b/src/components/projects/project.css
@@ -13,7 +13,7 @@
 .projectButton {
     display: flex;
     justify-content: space-evenly;
-    margin: 0 0 100px 0;
+    margin: 0 0 50px 0;
 }
 .projects {
     display: flex;
@@ -34,4 +34,7 @@
     color: red;
     motion-rotation: 160deg;
     font-family: cursive;
+}
+.card-img-top {
+    width: 100%;
 }
